--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -209,26 +209,7 @@ As we describe in the general method section.
 
 Figure \ref{fig:ex1a-dprime-rt} shows \emph{d} prime and reaction times during the perceptual matching task. We conducted a single factor (valence: good, neutral, bad) repeated measure ANOVA.
 
-\begin{table}[tbp]
-\begin{center}
-\begin{threeparttable}
-\caption{\label{tab:unnamed-chunk-1}Repeated measure ANOVA of *d* prime from Experiment 1a}
-\begin{tabular}{lllllll}
-\toprule
-Effect & \multicolumn{1}{c}{$F$} & \multicolumn{1}{c}{$\mathit{df}_1$} & \multicolumn{1}{c}{$\mathit{df}_2$} & \multicolumn{1}{c}{$\mathit{MSE}$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\hat{\eta}^2_G$}\\
-\midrule
-Valence & 6.19 & 2 & 100 & 0.26 & .003 & .020\\
-\bottomrule
-\addlinespace
-\end{tabular}
-\begin{tablenotes}[para]
-\normalsize{\textit{Note.} *d* prime was calculated in a signal detection way.}
-\end{tablenotes}
-\end{threeparttable}
-\end{center}
-\end{table}
-
-We found the effect of Valence (\(F(2, 100) = 6.19\), \(\mathit{MSE} = 0.26\), \(p = .003\), \(\hat{\eta}^2_G = .020\)). The post-hoc comparison with multiple comparison correction revealed that the shapes associated with Good-person (2.11, SE = 0.14) has greater \emph{d} prime than shapes associated with Bad-person (1.75, SE = 0.14), \emph{t}(50) = 3.304, \emph{p} = 0.0049. The Good-person condition was also greater than the Netural-person condition (1.95, SE = 0.16), but didn't reach statical significant, \emph{t}(50) = 1.54, \emph{p} = 0.28. Neither the Neutral-person conditiona is significantly greater than the Bad-person conidition, \emph{t}(50) = 2.109, p = 098.
+We found the effect of Valence (\(F(2, 100) = 6.19\), \(\mathit{MSE} = 0.26\), \(p = .003\), \(\hat{\eta}^2_G = .020\)). The post-hoc comparison with multiple comparison correction revealed that the shapes associated with Good-person (2.11, SE = 0.14) has greater \emph{d} prime than shapes associated with Bad-person (1.75, SE = 0.14), \emph{t}(50) = 3.304, \emph{p} = 0.0049. The Good-person condition was also greater than the Netural-person condition (1.95, SE = 0.16), but didn't reach statical significant, \emph{t}(50) = 1.54, \emph{p} = 0.28. Neither the Neutral-person conditiona is significantly greater than the Bad-person conidition, \emph{t}(50) = 2.109, \emph{p} = .098.
 
 \hypertarget{reaction-time}{%
 \subsubsection{Reaction time}\label{reaction-time}}
@@ -269,23 +250,23 @@ Data was analyzed as in experiment 1a.
 \hypertarget{results-1}{%
 \subsection{Results}\label{results-1}}
 
-We replicated the advantage of positive condition in experiment 1a.
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/ex1b-dprime-rt-1.pdf}
+\caption{\label{fig:ex1b-dprime-rt}RT and \emph{d} prime of Experiment 1b.}
+\end{figure}
+
+Figure \ref{fig:ex1b-dprime-rt} shows \emph{d} prime and reaction times of experiment 1b.
 
 \hypertarget{analaysis-of-d-prime.}{%
 \subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.}}
 
-There was evidence for the main effect of valence, \(F(2, 102) = 14.98\), \(\mathit{MSE} = 0.16\), \(p < .001\), \(\hat{\eta}^2_G = .053\). Paired t test showed that the Good-Person condition (1.9 \(\pm\) 0.104) was with greater \emph{d} prime than Netural condition (1.49 \(\pm\) 0.1, \emph{t}(49) = 5.583, \emph{p} \textless{} 0.001, Cohen's \emph{d} = 0.415). We also found that the Bad-Person condition (1.71 \(\pm\) 0.11) has also greater \emph{d} prime than neutral condition , \emph{t}(49) = -3.106, \emph{p} = 0.008, Cohen's \emph{d} = -0.229). There was no-significant difference between Good and bad conidition, \emph{t}(49) = 2.05, \emph{p} = 0.11.
+Repeated measures ANOVA revealed main effect of valence, \(F(2, 102) = 14.98\), \(\mathit{MSE} = 0.16\), \(p < .001\), \(\hat{\eta}^2_G = .053\). Paired t test showed that the Good-Person condition (1.87 \(\pm\) 0.102) was with greater \emph{d} prime than Netural condition (1.44 \(\pm\) 0.101, \emph{t}(51) = 5.945, \emph{p} \textless{} 0.001). We also found that the Bad-Person condition (1.67 \(\pm\) 0.11) has also greater \emph{d} prime than neutral condition , \emph{t}(51) = 3.132, \emph{p} = 0.008). There Good-person condition was also slightly greater than the bad conidition, \emph{t}(51) = 2.265, \emph{p} = 0.0701.
 
-\hypertarget{analaysis-of-reaction-time.}{%
-\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.}}
+\hypertarget{reaction-time-1}{%
+\subsubsection{Reaction time}\label{reaction-time-1}}
 
-The results of reaction times of matchness trials showed similiar pattern as the \emph{d} prime data.
-
-We found intercation between Matchness and Valence (\(F(1.95, 99.31) = 19.71\), \(\mathit{MSE} = 960.92\), \(p < .001\), \(\hat{\eta}^2_G = .031\)) and then analyzed the matched trials and mismatched trials separately, as in experiment 1a.
-
-For matched trials, we found the effect of valence \(F(1.94, 99.1) = 33.97\), \(\mathit{MSE} = 1,343.19\), \(p < .001\), \(\hat{\eta}^2_G = .115\). For non-matched trials, there was no significant effect of Valence (\(F(1.9, 97.13) = 1.80\), \(\mathit{MSE} = 430.15\), \(p = .173\), \(\hat{\eta}^2_G = .003\)).
-
-Post-hoc \emph{t}-tests revealed that shapes associated with Good Person (686 \(\pm\) 8.97) were responded faster than Neutral-Person (743 \(\pm\) 9.66), (\emph{t}(49) = -8.379, \emph{p} \textless{} 0.001) and Bad Person (730 \(\pm\) 9.11), \emph{t}(49) = -5.632, \emph{p} \textless{} 0.0001). While there was no significant differences between Neutral and Bad-Person condition (\emph{t}(49) = 1.83, \emph{p} = 0.171).
+We found intercation between Matchness and Valence (\(F(1.95, 99.31) = 19.71\), \(\mathit{MSE} = 960.92\), \(p < .001\), \(\hat{\eta}^2_G = .031\)) and then analyzed the matched trials and mismatched trials separately, as in experiment 1a. For matched trials, we found the effect of valence \(F(1.94, 99.1) = 33.97\), \(\mathit{MSE} = 1,343.19\), \(p < .001\), \(\hat{\eta}^2_G = .115\). Post-hoc \emph{t}-tests revealed that shapes associated with Good Person (684 \(\pm\) 8.77) were responded faster than Neutral-Person (740 \(\pm\) 9.84), (\emph{t}(51) = -8.167, \emph{p} \textless{} 0.001) and Bad Person (728 \(\pm\) 9.15), \emph{t}(51) = -5.724, \emph{p} \textless{} 0.0001). While there was no significant differences between Neutral and Bad-Person condition (\emph{t}(51) = 1.686, \emph{p} = 0.221). For non-matched trials, there was no significant effect of Valence (\(F(1.9, 97.13) = 1.80\), \(\mathit{MSE} = 430.15\), \(p = .173\), \(\hat{\eta}^2_G = .003\)).
 
 \hypertarget{discussion}{%
 \subsection{Discussion}\label{discussion}}
@@ -326,7 +307,13 @@ Data was analyzed as in experiment 1a.
 \hypertarget{results-2}{%
 \subsection{Results}\label{results-2}}
 
-We didn't found effect of valence on \emph{d} prime, \(F(2, 44) = 0.23\), \(\mathit{MSE} = 0.40\), \(p = .798\), \(\hat{\eta}^2_G = .005\). Also no effect of valence on RT (\(F(1.63, 35.81) = 0.22\), \(\mathit{MSE} = 2,212.71\), \(p = .761\), \(\hat{\eta}^2_G = .001\)) or interaction between valence and matchness on RT (\(F(1.79, 39.43) = 1.20\), \(\mathit{MSE} = 1,973.91\), \(p = .308\), \(\hat{\eta}^2_G = .005\)).
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/ex1c-dprime-rt-1.pdf}
+\caption{\label{fig:ex1c-dprime-rt}RT and \emph{d} prime of Experiment 1c.}
+\end{figure}
+
+Figure \ref{fig:ex1c-dprime-rt} shows \emph{d} prime and reaction times of experiment 1c. We conducted same analysis as in Experiment 1a. Our analysis didn't should effect of valence on \emph{d} prime, \(F(2, 44) = 0.23\), \(\mathit{MSE} = 0.40\), \(p = .798\), \(\hat{\eta}^2_G = .005\). Neither the effect of valence on RT (\(F(1.63, 35.81) = 0.22\), \(\mathit{MSE} = 2,212.71\), \(p = .761\), \(\hat{\eta}^2_G = .001\)) or interaction between valence and matchness on RT (\(F(1.79, 39.43) = 1.20\), \(\mathit{MSE} = 1,973.91\), \(p = .308\), \(\hat{\eta}^2_G = .005\)).
 
 \hypertarget{discussion-1}{%
 \subsection{Discussion}\label{discussion-1}}
@@ -351,29 +338,34 @@ Experiment 2 was conducted for two purpose: (1) to further confirm the facilitat
 
 In Experiment 2, the sequential presenting makes the matching task much easier than experiment 1. To avoid ceiling effect on behavioral data, we did a few pilot experiments to get optimal parameters, i.e., the conditions under which participant have similar accuracy as in Experiment 1 (around 70 \textasciitilde{} 80\% accuracy).
 In the final procedure, the label (good person, bad person, or neutral person) was presented for 50 ms and then masked by a scrambled image for 200 ms. A geometric shape followed the scrambled mask for 50 ms in a noisy background (which was produced by first decomposing a square with ¾ gray area and ¼ white area to small squares with a size of 2 × 2 pixels and then re-combine these small pieces randomly), instead of pure gray background in Experiment 1. After that, a blank screen was presented 1100 ms, during which participants should press a button to indicate the label and the shape match the original association or not. Feedback was given, as in study 1. The next trial then started after 700 \textasciitilde{} 1100 ms blank. Other aspects of study 2 were identical to study 1.
-\#\#\# Analysis
+
+\hypertarget{analysis}{%
+\subsubsection{Analysis}\label{analysis}}
+
 Data was analyzed as in study 1a.
 
 \hypertarget{results-3}{%
 \subsection{Results}\label{results-3}}
 
-Less than 0.2\% correct trials with less than 200ms reaction times were exlucded.
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/ex2-dprime-rt-1.pdf}
+\caption{\label{fig:ex2-dprime-rt}RT and \emph{d} prime of Experiment 2.}
+\end{figure}
 
-\hypertarget{analaysis-of-d-prime.-1}{%
-\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-1}}
+Figure \ref{fig:ex2-dprime-rt} shows \emph{d} prime and reaction times of experiment 2. Less than 0.2\% correct trials with less than 200ms reaction times were exlucded.
 
-There was evidence for the main effect of valence, \(F(2, 66) = 14.41\), \(\mathit{MSE} = 0.21\), \(p < .001\), \(\hat{\eta}^2_G = .066\). Paired t test showed that the Good-Person condition (2.86 \(\pm\) 0.16) was with greater \emph{d} prime than Netural condition (2.28 \(\pm\) 0.15, \emph{t}(32) = 4.46, \emph{p} = 0.002, Cohen's \emph{d} = 0.587). We also found that the Bad-Person condition (2.47 \(\pm\) 0.135) has also greater \emph{d} prime than neutral condition , \emph{t}(32) = 4.15, \emph{p} = 0.007, Cohen's \emph{d} = 0.396). There was no-significant difference between Good and bad conidition, \emph{t}(32) = -1,667, \emph{p} = 0.233, Cohen's \emph{d} = -0.191.
+\hypertarget{d-prime.}{%
+\subsubsection{\texorpdfstring{\emph{d} prime.}{d prime.}}\label{d-prime.}}
 
-\hypertarget{analaysis-of-reaction-time.-1}{%
-\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-1}}
+There was evidence for the main effect of valence, \(F(2, 66) = 14.41\), \(\mathit{MSE} = 0.21\), \(p < .001\), \(\hat{\eta}^2_G = .066\). Paired t test showed that the Good-Person condition (2.79 \(\pm\) 0.17) was with greater \emph{d} prime than Netural condition (2.21 \(\pm\) 0.16, \emph{t}(33) = 4.723, \emph{p} = 0.001) and Bad-person condition (2.41 \(\pm\) 0.14), \emph{t}(33) = 4.067, \emph{p} = 0.008). There was no-significant difference between Neutral-person and Bad-person conidition, \emph{t}(33) = -1,802, \emph{p} = 0.185.
+
+\hypertarget{reaction-time-2}{%
+\subsubsection{Reaction time}\label{reaction-time-2}}
 
 The results of reaction times of matchness trials showed similiar pattern as the \emph{d} prime data.
 
-We found intercation between Matchness and Valence (\(F(1.99, 65.7) = 9.53\), \(\mathit{MSE} = 605.36\), \(p < .001\), \(\hat{\eta}^2_G = .017\)) and then analyzed the matched trials and mismatched trials separately, as in experiment 1a.
-
-For matched trials, we found the effect of valence \(F(1.99, 65.76) = 10.57\), \(\mathit{MSE} = 1,192.65\), \(p < .001\), \(\hat{\eta}^2_G = .067\). For non-matched trials, there was no significant effect of Valence (\(F(1.99, 65.83) = 0.17\), \(\mathit{MSE} = 489.80\), \(p = .843\), \(\hat{\eta}^2_G = .001\)).
-
-Post-hoc \emph{t}-tests revealed that shapes associated with Good Person (550 \(\pm\) 9.45) were responded faster than Neutral-Person (583 \(\pm\) 11.1), (\emph{t}(32) = -3.871, \emph{p} = 0.0018) and Bad Person (584 \(\pm\) 10.2), \emph{t}(32) = -3.838, \emph{p} = 0.0016). While there was no significant differences between Neutral and Bad-Person condition (\emph{t}(32) = -0.122, \emph{p} = 0.9918).
+We found intercation between Matchness and Valence (\(F(1.99, 65.7) = 9.53\), \(\mathit{MSE} = 605.36\), \(p < .001\), \(\hat{\eta}^2_G = .017\)) and then analyzed the matched trials and mismatched trials separately, as in experiment 1a. For matched trials, we found the effect of valence \(F(1.99, 65.76) = 10.57\), \(\mathit{MSE} = 1,192.65\), \(p < .001\), \(\hat{\eta}^2_G = .067\). Post-hoc \emph{t}-tests revealed that shapes associated with Good Person (548 \(\pm\) 9.4) were responded faster than Neutral-Person (582 \(\pm\) 10.9), (\emph{t}(33) = -3.95, \emph{p} = 0.0011) and Bad Person (582 \(\pm\) 10.2), \emph{t}(33) = -3.9, \emph{p} = 0.0013). While there was no significant differences between Neutral and Bad-Person condition (\emph{t}(33) = -0.01, \emph{p} = 0.999). For non-matched trials, there was no significant effect of Valence (\(F(1.99, 65.83) = 0.17\), \(\mathit{MSE} = 489.80\), \(p = .843\), \(\hat{\eta}^2_G = .001\)).
 
 \hypertarget{discussion-2}{%
 \subsection{Discussion}\label{discussion-2}}
@@ -419,15 +411,15 @@ Data analysis followed strategies described in the general method section. React
 
 0.00 correct trials with less than 200ms reaction times were exlucded.
 
-\hypertarget{analaysis-of-d-prime.-2}{%
-\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-2}}
+\hypertarget{analaysis-of-d-prime.-1}{%
+\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-1}}
 
 There was evidence for the main effect of valence, \(F(2, 68) = 11.09\), \(\mathit{MSE} = 0.22\), \(p < .001\), \(\hat{\eta}^2_G = .039\), and main effect of self-relevance, \(F(1, 34) = 3.22\), \(\mathit{MSE} = 0.54\), \(p = .082\), \(\hat{\eta}^2_G = .015\).
 
 Paired t test showed that the Good-Person condition (2.86 \(\pm\) 0.16) was with greater \emph{d} prime than Netural condition (2.28 \(\pm\) 0.15, \emph{t}(32) = 4.46, \emph{p} = 0.002, Cohen's \emph{d} = 0.587). We also found that the Bad-Person condition (2.47 \(\pm\) 0.135) has also greater \emph{d} prime than neutral condition , \emph{t}(32) = 4.15, \emph{p} = 0.007, Cohen's \emph{d} = 0.396). There was no-significant difference between Good and bad conidition, \emph{t}(32) = -1,667, \emph{p} = 0.233, Cohen's \emph{d} = -0.191.
 
-\hypertarget{analaysis-of-reaction-time.-2}{%
-\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-2}}
+\hypertarget{analaysis-of-reaction-time.}{%
+\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.}}
 
 The results of reaction times of matchness trials showed similiar pattern as the \emph{d} prime data.
 
@@ -481,8 +473,8 @@ For the stranger condition, there was no strong evidence for the effect of the m
 
 We also tested the effect of personal association by comparing \emph{d'} values for difference moral valence level. The results showed that the bad-self association condition was responded worse than the bad-stranger association condition (2.18 ± 0.911), \emph{t}(55) = -4.1, \emph{p} \textless{} 0.001, Cohen's \emph{d} = -0.548, 95\% CI {[}-0.827 -0.265{]}, BF10 = 167. The neutral-self was also worse than the neutral-stranger (2.28 ± 1), \emph{t}(55) = -3.15, \emph{p} = 0.0026 , Cohen's \emph{d} = -0.422, 95\% CI {[}-0.693 -0.146{]}, BF10 = 11.7. While the good-self association condition and good-stranger conditions (2.03 ± 0.89) are not differ from each other, \emph{t}(55) = 1.394, \emph{p} = 0.169, Cohen's \emph{d} = 0.186, 95\% CI{[}-0.079 0.449{]}, BF10 = 0.364.
 
-\hypertarget{analaysis-of-reaction-time.-3}{%
-\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-3}}
+\hypertarget{analaysis-of-reaction-time.-1}{%
+\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-1}}
 
 The results of reaction times of matchness trials showed similiar pattern as the \emph{d} prime data.
 
@@ -535,8 +527,8 @@ The data were analyzed in the same way as in experiment 3a and 3b.
 \hypertarget{results-6}{%
 \subsection{Results}\label{results-6}}
 
-\hypertarget{d-prime.}{%
-\subsubsection{\texorpdfstring{\emph{d} prime.}{d prime.}}\label{d-prime.}}
+\hypertarget{d-prime.-1}{%
+\subsubsection{\texorpdfstring{\emph{d} prime.}{d prime.}}\label{d-prime.-1}}
 
 We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measures ANOVA.
 
@@ -558,7 +550,7 @@ For matched trials, we found the effect of identity \(F(1, 58) = 124.15\), \(\ma
 \begin{table}[tbp]
 \begin{center}
 \begin{threeparttable}
-\caption{\label{tab:unnamed-chunk-5}A really beautiful ANOVA table.}
+\caption{\label{tab:unnamed-chunk-4}A really beautiful ANOVA table.}
 \begin{tabular}{lllllll}
 \toprule
 Effect & \multicolumn{1}{c}{$F$} & \multicolumn{1}{c}{$\mathit{df}_1^{GG}$} & \multicolumn{1}{c}{$\mathit{df}_2^{GG}$} & \multicolumn{1}{c}{$\mathit{MSE}$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\hat{\eta}^2_G$}\\
@@ -684,8 +676,8 @@ For the person appearance, the main effect of valence is significant, \(F(1.73, 
 
 For scene appearance, the main effect of valence is significnat \(F(1.79, 66.4) = 14.02\), \(\mathit{MSE} = 0.34\), \(p < .001\), \(\hat{\eta}^2_G = .072\). Post-hoc analysis revealed the same pattern as in person task: good condition (2.23, se = 0.156) is higher than both neutral (1.57, se = 0.178, \emph{t}(37) =4.683, \emph{p} = 0.0001) and bad (1.77, se = 0.148, \emph{t}(37) = 3.414, \emph{p} = 0.0044), but neutral and bad conditions are not different (\emph{t}(37) = -1.893, \emph{p} = 0.1549)
 
-\hypertarget{reaction-time-1}{%
-\subsubsection{Reaction time}\label{reaction-time-1}}
+\hypertarget{reaction-time-3}{%
+\subsubsection{Reaction time}\label{reaction-time-3}}
 
 As in previous experiment, we focused our analysis on the matched trials. We conducted 4 (task type: morality, emotion, beauty of person, beauty of scene) by 3 (Valence: good, neutral, bad) repeated measure ANOVA for matched trials only.
 
@@ -739,8 +731,8 @@ Only the behavioral results were reported here.
 
 We conducted repeated measures ANOVA, with moral valence as independent variable. The results revealed the main effect of valence (\(F(1.73, 41.45) = 4.63\), \(\mathit{MSE} = 0.10\), \(p = .019\), \(\hat{\eta}^2_G = .025\)). Post-hoc anlaysis revealed that shapes link with Good person (mean = 3.13, SE = 0.109) is greater than Neutral condition (mean = 2.88, SE = 0.14),\emph{t} = 2.916, \emph{df} = 24, \emph{p} = 0.02, p-value adjusted by Tukey method, but the \emph{d} prime between Good and bad (mean = 3.03, SE = 0.142) (\emph{t} = 1.512, \emph{df} = 24, \emph{p} = 0.3034, p-value adjusted by Tukey method), bad and neutral (\emph{t} = 1.599, \emph{df} = 24, \emph{p} = 0.2655, p-value adjusted by Tukey method) were not siginificant.
 
-\hypertarget{analaysis-of-reaction-time.-4}{%
-\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-4}}
+\hypertarget{analaysis-of-reaction-time.-2}{%
+\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-2}}
 
 The results of reaction times of matchness trials showed similiar pattern as the \emph{d} prime data.
 
