--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -409,24 +409,29 @@ Data analysis followed strategies described in the general method section. React
 \hypertarget{results-4}{%
 \subsection{Results}\label{results-4}}
 
-0.00 correct trials with less than 200ms reaction times were exlucded.
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/ex3a-dprime-rt-1.pdf}
+\caption{\label{fig:ex3a-dprime-rt}RT and \emph{d} prime of Experiment 3a.}
+\end{figure}
 
-\hypertarget{analaysis-of-d-prime.-1}{%
-\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-1}}
+Figure \ref{fig:ex3a-dprime-rt} shows \emph{d} prime and reaction times of experiment 3a. Less than 5\% correct trials with less than 200ms reaction times were exlucded.
 
-There was evidence for the main effect of valence, \(F(2, 68) = 11.09\), \(\mathit{MSE} = 0.22\), \(p < .001\), \(\hat{\eta}^2_G = .039\), and main effect of self-relevance, \(F(1, 34) = 3.22\), \(\mathit{MSE} = 0.54\), \(p = .082\), \(\hat{\eta}^2_G = .015\).
+\hypertarget{d-prime-1}{%
+\subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-1}}
 
-Paired t test showed that the Good-Person condition (2.86 \(\pm\) 0.16) was with greater \emph{d} prime than Netural condition (2.28 \(\pm\) 0.15, \emph{t}(32) = 4.46, \emph{p} = 0.002, Cohen's \emph{d} = 0.587). We also found that the Bad-Person condition (2.47 \(\pm\) 0.135) has also greater \emph{d} prime than neutral condition , \emph{t}(32) = 4.15, \emph{p} = 0.007, Cohen's \emph{d} = 0.396). There was no-significant difference between Good and bad conidition, \emph{t}(32) = -1,667, \emph{p} = 0.233, Cohen's \emph{d} = -0.191.
+There was evidence for the main effect of valence, \(F(2, 68) = 11.09\), \(\mathit{MSE} = 0.22\), \(p < .001\), \(\hat{\eta}^2_G = .039\), and main effect of self-relevance, \(F(1, 34) = 3.22\), \(\mathit{MSE} = 0.54\), \(p = .082\), \(\hat{\eta}^2_G = .015\), as well as the interaction, \(F(2, 68) = 3.39\), \(\mathit{MSE} = 0.38\), \(p = .039\), \(\hat{\eta}^2_G = .022\).
 
-\hypertarget{analaysis-of-reaction-time.}{%
-\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.}}
+We then conducted separated ANOVA for self-referential and other-referential trials. The valence effect was shown for the self-referential conditions, \(F(2, 68) = 13.98\), \(\mathit{MSE} = 0.25\), \(p < .001\), \(\hat{\eta}^2_G = .119\). Post-hoc test revealed that the Good-Self condition (1.97 \(\pm\) 0.14) was with greater \emph{d} prime than Netural condition (1.41 \(\pm\) 0.12, \emph{t}(34) = 4.505, \emph{p} = 0.0002), and Bad-self condition (1.43 \(\pm\) 0.102), \emph{t}(34) = 3.856, \emph{p} = 0.0014. There was difference between neutral and bad conidition, \emph{t}(34) = -0.238, \emph{p} = 0.9694. However, no effect of valence was found for the other-referential condition \(F(2, 68) = 0.38\), \(\mathit{MSE} = 0.34\), \(p = .683\), \(\hat{\eta}^2_G = .004\).
 
-The results of reaction times of matchness trials showed similiar pattern as the \emph{d} prime data.
+\hypertarget{reaction-time-3}{%
+\subsubsection{Reaction time}\label{reaction-time-3}}
 
 We found intercation between Matchness and Valence (\(F(1.98, 67.44) = 26.29\), \(\mathit{MSE} = 730.09\), \(p < .001\), \(\hat{\eta}^2_G = .025\)) and then analyzed the matched trials and mismatched trials separately, as in previous experiments.
 
-For the matched trials, we found that main effect of valence \(F(1.98, 67.34) = 35.76\), \(\mathit{MSE} = 1,127.25\), \(p < .001\), \(\hat{\eta}^2_G = .079\), but not the effect of identity \(F(1, 34) = 0.20\), \(\mathit{MSE} = 3,507.14\), \(p = .660\), \(\hat{\eta}^2_G = .001\), nor the interaction \(F(1.72, 58.61) = 3.89\), \(\mathit{MSE} = 2,750.19\), \(p = .032\), \(\hat{\eta}^2_G = .019\).
-For the mismatched trials, we found the main effect of Identity \(F(1, 34) = 3.43\), \(\mathit{MSE} = 660.02\), \(p = .073\), \(\hat{\eta}^2_G = .004\), but not the main effect of valence \(F(1.89, 64.33) = 0.40\), \(\mathit{MSE} = 444.10\), \(p = .661\), \(\hat{\eta}^2_G = .001\) or interaction between the two \(F(1.94, 66.02) = 2.42\), \(\mathit{MSE} = 817.35\), \(p = .099\), \(\hat{\eta}^2_G = .007\).
+For the matched trials, we found that the interaction between identity and valence, \(F(1.72, 58.61) = 3.89\), \(\mathit{MSE} = 2,750.19\), \(p = .032\), \(\hat{\eta}^2_G = .019\), as well as the main effect of valence \(F(1.98, 67.34) = 35.76\), \(\mathit{MSE} = 1,127.25\), \(p < .001\), \(\hat{\eta}^2_G = .079\), but not the effect of identity \(F(1, 34) = 0.20\), \(\mathit{MSE} = 3,507.14\), \(p = .660\), \(\hat{\eta}^2_G = .001\). As for the d prime, we separated analyzed the self-referential and other-referential trials. For the Self-referential trials, we found the main effect of valence, \(F(1.8, 61.09) = 30.39\), \(\mathit{MSE} = 1,584.53\), \(p < .001\), \(\hat{\eta}^2_G = .159\); for the other-referential trials, the effect of valence is weaker, \(F(1.86, 63.08) = 2.85\), \(\mathit{MSE} = 2,224.30\), \(p = .069\), \(\hat{\eta}^2_G = .024\). We then focused on the self conditions: the good-self condition (713 \(\pm\) 12) is faster than neutral- (776 \(\pm\) 11.8), \emph{t}(34) = -7.396, \emph{p} \textless{} .0001 , and bad-self (772 \(\pm\) 10.1) conditions, \emph{t}(34) = -5.66, \emph{p} \textless{} .0001. But there is not difference between neutral- and bad-self conditions, \emph{t}(34) = 0.481, \emph{p} = 0.881.
+
+For the mismatched trials, we didn't found any strong effect: identity, \(F(1, 34) = 3.43\), \(\mathit{MSE} = 660.02\), \(p = .073\), \(\hat{\eta}^2_G = .004\), valence \(F(1.89, 64.33) = 0.40\), \(\mathit{MSE} = 444.10\), \(p = .661\), \(\hat{\eta}^2_G = .001\), or interaction between the two \(F(1.94, 66.02) = 2.42\), \(\mathit{MSE} = 817.35\), \(p = .099\), \(\hat{\eta}^2_G = .007\).
 
 \hypertarget{experiment-3b}{%
 \section{Experiment 3b}\label{experiment-3b}}
@@ -473,8 +478,8 @@ For the stranger condition, there was no strong evidence for the effect of the m
 
 We also tested the effect of personal association by comparing \emph{d'} values for difference moral valence level. The results showed that the bad-self association condition was responded worse than the bad-stranger association condition (2.18 ± 0.911), \emph{t}(55) = -4.1, \emph{p} \textless{} 0.001, Cohen's \emph{d} = -0.548, 95\% CI {[}-0.827 -0.265{]}, BF10 = 167. The neutral-self was also worse than the neutral-stranger (2.28 ± 1), \emph{t}(55) = -3.15, \emph{p} = 0.0026 , Cohen's \emph{d} = -0.422, 95\% CI {[}-0.693 -0.146{]}, BF10 = 11.7. While the good-self association condition and good-stranger conditions (2.03 ± 0.89) are not differ from each other, \emph{t}(55) = 1.394, \emph{p} = 0.169, Cohen's \emph{d} = 0.186, 95\% CI{[}-0.079 0.449{]}, BF10 = 0.364.
 
-\hypertarget{analaysis-of-reaction-time.-1}{%
-\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-1}}
+\hypertarget{analaysis-of-reaction-time.}{%
+\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.}}
 
 The results of reaction times of matchness trials showed similiar pattern as the \emph{d} prime data.
 
@@ -610,8 +615,8 @@ The data were analyzed as in experiment 4a.
 \hypertarget{results-7}{%
 \subsection{Results}\label{results-7}}
 
-\hypertarget{d-prime-1}{%
-\subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-1}}
+\hypertarget{d-prime-2}{%
+\subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-2}}
 
 We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA. The results revealed no effect of valence (\(F(1.59, 69.94) = 2.34\), \(\mathit{MSE} = 0.48\), \(p = .115\), \(\hat{\eta}^2_G = .010\)), or identity, \(F(1, 44) = 0.00\), \(\mathit{MSE} = 0.08\), \(p = .994\), \(\hat{\eta}^2_G = .000\), or their interactions, \(F(1.96, 86.41) = 0.53\), \(\mathit{MSE} = 0.10\), \(p = .585\), \(\hat{\eta}^2_G = .001\).
 
@@ -663,8 +668,8 @@ Participants finish 4 session of experiment, and each include one experiment as 
 \hypertarget{results-8}{%
 \subsection{Results}\label{results-8}}
 
-\hypertarget{d-prime-2}{%
-\subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-2}}
+\hypertarget{d-prime-3}{%
+\subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-3}}
 
 We conducted 4 (task type: morality, emotion, person, scene) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA. The results revealed no effect of task type (\(F(2.95, 108.97) = 1.18\), \(\mathit{MSE} = 0.76\), \(p = .321\), \(\hat{\eta}^2_G = .006\)), but revealed effect of valence, \(F(1.85, 68.49) = 29.70\), \(\mathit{MSE} = 0.29\), \(p < .001\), \(\hat{\eta}^2_G = .034\), and their interactions, \(F(4.68, 173.09) = 5.85\), \(\mathit{MSE} = 0.31\), \(p < .001\), \(\hat{\eta}^2_G = .019\).
 
@@ -676,8 +681,8 @@ For the person appearance, the main effect of valence is significant, \(F(1.73, 
 
 For scene appearance, the main effect of valence is significnat \(F(1.79, 66.4) = 14.02\), \(\mathit{MSE} = 0.34\), \(p < .001\), \(\hat{\eta}^2_G = .072\). Post-hoc analysis revealed the same pattern as in person task: good condition (2.23, se = 0.156) is higher than both neutral (1.57, se = 0.178, \emph{t}(37) =4.683, \emph{p} = 0.0001) and bad (1.77, se = 0.148, \emph{t}(37) = 3.414, \emph{p} = 0.0044), but neutral and bad conditions are not different (\emph{t}(37) = -1.893, \emph{p} = 0.1549)
 
-\hypertarget{reaction-time-3}{%
-\subsubsection{Reaction time}\label{reaction-time-3}}
+\hypertarget{reaction-time-4}{%
+\subsubsection{Reaction time}\label{reaction-time-4}}
 
 As in previous experiment, we focused our analysis on the matched trials. We conducted 4 (task type: morality, emotion, beauty of person, beauty of scene) by 3 (Valence: good, neutral, bad) repeated measure ANOVA for matched trials only.
 
@@ -726,13 +731,13 @@ All the stimuli were presented on a gray background (RGB: 127, 127, 127). E-prim
 
 Only the behavioral results were reported here.
 
-\hypertarget{d-prime-3}{%
-\subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-3}}
+\hypertarget{d-prime-4}{%
+\subsubsection{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-4}}
 
 We conducted repeated measures ANOVA, with moral valence as independent variable. The results revealed the main effect of valence (\(F(1.73, 41.45) = 4.63\), \(\mathit{MSE} = 0.10\), \(p = .019\), \(\hat{\eta}^2_G = .025\)). Post-hoc anlaysis revealed that shapes link with Good person (mean = 3.13, SE = 0.109) is greater than Neutral condition (mean = 2.88, SE = 0.14),\emph{t} = 2.916, \emph{df} = 24, \emph{p} = 0.02, p-value adjusted by Tukey method, but the \emph{d} prime between Good and bad (mean = 3.03, SE = 0.142) (\emph{t} = 1.512, \emph{df} = 24, \emph{p} = 0.3034, p-value adjusted by Tukey method), bad and neutral (\emph{t} = 1.599, \emph{df} = 24, \emph{p} = 0.2655, p-value adjusted by Tukey method) were not siginificant.
 
-\hypertarget{analaysis-of-reaction-time.-2}{%
-\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-2}}
+\hypertarget{analaysis-of-reaction-time.-1}{%
+\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-1}}
 
 The results of reaction times of matchness trials showed similiar pattern as the \emph{d} prime data.
 
@@ -778,8 +783,8 @@ Only the behavioral results were reported here.
 \hypertarget{day-one}{%
 \subsubsection{Day one}\label{day-one}}
 
-\hypertarget{d-prime-4}{%
-\paragraph{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-4}}
+\hypertarget{d-prime-5}{%
+\paragraph{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-5}}
 
 There was evidence for the interaction between identity and valence, \(F(2, 42) = 12.88\), \(\mathit{MSE} = 0.13\), \(p < .001\), \(\hat{\eta}^2_G = .041\). We further split the self- and other-relevant trials. For the self trials, there was significant effect of valence, \(F(2, 42) = 29.31\), \(\mathit{MSE} = 0.12\), \(p < .001\), \(\hat{\eta}^2_G = .147\). Post-hoc comparison showed that the good-self condition (2.71, SE = 0.199) is better than both neutral-self (1.98, SE = 0.151), \emph{t}(21) = 5.984, \emph{p} \textless{} 0.001, and bad-self condition (2.07, SE = 0.154), \emph{t}(21) = 6.555, \emph{p} \textless{} 0.001. But there was no significant difference between bad-self and neutral-self, \emph{t}(21) = -1.059, \emph{p} = 0.549. For other trials, there was no significant effect of valuence, \(F(2, 42) = 0.00\), \(\mathit{MSE} = 0.16\), \(p = .999\), \(\hat{\eta}^2_G = .000\).
 
@@ -791,8 +796,8 @@ For the matched trials, there was interaction between identity and valence, \(F(
 \hypertarget{day-two}{%
 \subsubsection{Day two}\label{day-two}}
 
-\hypertarget{d-prime-5}{%
-\paragraph{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-5}}
+\hypertarget{d-prime-6}{%
+\paragraph{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-6}}
 
 There was evidence for the interaction between identity and valence, \(F(2, 42) = 3.86\), \(\mathit{MSE} = 0.08\), \(p = .029\), \(\hat{\eta}^2_G = .005\). We further split the self- and other-relevant trials. For the self trials, there was significant effect of valence, \(F(2, 42) = 7.35\), \(\mathit{MSE} = 0.08\), \(p = .002\), \(\hat{\eta}^2_G = .021\). Post-hoc comparison showed that the good-self condition (2.71, SE = 0.214) is better than both neutral-self (2.43, SE = 0.175), \emph{t}(21) = 2.98, \emph{p} = 0.0189, and bad-self condition (2.43, SE = 0.199), \emph{t}(21) = 3.93, \emph{p} = 0.0021. But there was no significant difference between bad-self and neutral-self, \emph{t}(21) = -0.097, \emph{p} = 0.995. For other trials, there was no significant effect of valuence, \(F(2, 42) = 1.46\), \(\mathit{MSE} = 0.09\), \(p = .245\), \(\hat{\eta}^2_G = .004\).
 
