--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -449,7 +449,7 @@ Mplots(expName = 'exp1b', df1b.v.dprime_l,rtdata)
 
 Figure \@ref(fig:ex1b-dprime-rt) shows *d* prime and reaction times of experiment 1b. 
 
-### Analaysis of d prime.
+### *d* prime
 
 ```{r 1b_dprime, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
 # anova for d prime
@@ -923,12 +923,9 @@ Data analysis followed strategies described in the general method section. React
 
 
 ## Results
-`r df3a.invalid_trial_rate` correct trials with less than 200ms reaction times were exlucded.
 
-### Analaysis of d prime.
 
-```{r 3a_dprime, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
-# calculate d prime
+```{r 'ex3a-dprime-rt', fig.cap="RT and *d* prime of Experiment 3a.", fig.height=6, fig.width=10, warning=FALSE}
 df3a.v.dprime_l <- df3a.v %>%
   dplyr::mutate(sdt = mosaic::derivedFactor("hit" = (ACC ==1 & Matchness == "Match"), # code as hit
                                     "CR" = (ACC ==1  & Matchness == "Mismatch"),      # correct reject
@@ -944,38 +941,11 @@ df3a.v.dprime_l <- df3a.v %>%
   dplyr::mutate(hitR = ifelse(hitR == 1, 1 - 1/(2*(hit + miss)), hitR),     # if hit rate is 1, standardize it
                 FAR  = ifelse(FAR == 0, 1/(2*(hit + miss)), FAR)) %>%       # if FA rate is 0, standardize it
   dplyr::mutate(dprime = qnorm(hitR) - qnorm(FAR)) %>%
-  dplyr::select(Site, Subject, Age, Sex, Valence, Identity, dprime) %>%   # select relevant columns
+  dplyr::select(Site, Subject, Age, Sex, Valence, Identity, dprime) %>%     # select relevant columns
   dplyr::mutate(Valence = factor(Valence, levels = c("Good","Neutral","Bad")),
                 Identity = factor(Identity, levels = c('Self', 'Other')))
 
-### Long to wide
-#df1b.v.dprime_w <- df1b.v.dprime_l %>%
-#  tidyr::spread(key = Valence, value = dprime) %>%                                   # long to wide
-#  dplyr::rename_at(vars(-Site,-Subject,-Age,-Sex),function(x) paste0("d_",x))           # add prefix to certain conditions
-
-# anova for d prime
-df3a_dprime_anova <- afex::aov_ez('Subject','dprime',df3a.v.dprime_l,  # using afex's function 
-                                  within = c('Identity','Valence'))
-# use LMM, random intercept for each participant
-#df1b_d_mixed <- afex::mixed(dprime ~ Valence +(1|Subject), 
-#                          df1b.v.dprime_l,
-#                          method = "S",
-#                          control = lmerControl(optCtrl = list(maxfun = 1e6)))
-
-df3a_dprime_anova_apa <- df3a_dprime_anova$aov %>% papaja::apa_print()
-
-#posthoc_3a_d <- emmeans::emmeans(df3a_dprime_anova, "Valence") # compare each valence for both self and other condition
-#pairs(posthoc_3a_d)
-
-```
-There was evidence for the main effect of valence, `r df3a_dprime_anova_apa$full$Valence`, and main effect of self-relevance, `r df3a_dprime_anova_apa$full$Identity`. 
-
-Paired t test showed that the Good-Person condition (2.86 $\pm$ 0.16) was with greater *d* prime than Netural condition (2.28 $\pm$ 0.15, *t*(32) = 4.46, *p* = 0.002, Cohen's *d* = 0.587). We also found that the Bad-Person condition (2.47 $\pm$ 0.135) has also greater *d* prime than neutral condition , *t*(32) = 4.15, *p* = 0.007, Cohen's *d* = 0.396). There was no-significant difference between Good and bad conidition, *t*(32) = -1,667, *p* = 0.233, Cohen's *d* = -0.191.
-
-### Analaysis of reaction time.
-The results of reaction times of matchness trials showed similiar pattern as the *d* prime data.
-```{r 3a_RT, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
-# anova for RT with 2*2*3 design
+# calculate the mean RT for each condition of each participant
 df3a.v.rt_m <- df3a.v %>%
   dplyr::filter(ACC == 1) %>%
   dplyr::group_by(Site,Subject,Matchness, Identity, Valence) %>%
@@ -983,6 +953,46 @@ df3a.v.rt_m <- df3a.v %>%
                    Ntrial = length(RT)) %>%
   dplyr::ungroup()
 
+rtdata <- df3a.v.rt_m %>% dplyr::filter(Matchness == "Match") %>% dplyr::rename(RT = RT_m)
+
+Mplots(expName = 'exp3a', df3a.v.dprime_l,rtdata)
+
+```
+
+Figure \@ref(fig:ex3a-dprime-rt) shows *d* prime and reaction times of experiment 3a. Less than 5% correct trials with less than 200ms reaction times were exlucded.
+
+### *d* prime
+
+```{r 3a_dprime, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
+# anova for d prime
+df3a_dprime_anova <- afex::aov_ez('Subject','dprime',df3a.v.dprime_l, within = c('Identity','Valence'))
+df3a_dprime_anova_apa <- df3a_dprime_anova$aov %>% papaja::apa_print()
+
+posthoc_3a_d <- emmeans::emmeans(df3a_dprime_anova, "Valence") # compare each valence for both self and other condition
+#pairs(posthoc_3a_d)
+
+df3a_dprime_s_anova <- df3a.v.dprime_l %>%
+  dplyr::filter(Identity == 'Self') %>%
+  afex::aov_ez('Subject','dprime', ., within = c('Valence'))
+df3a_dprime_s_anova_apa <- df3a_dprime_s_anova$aov %>% papaja::apa_print()
+posthoc_3a_d_s <- emmeans::emmeans(df3a_dprime_s_anova, "Valence")
+pairs(posthoc_3a_d_s)
+
+df3a_dprime_o_anova <- df3a.v.dprime_l %>%
+  dplyr::filter(Identity == 'Other') %>%
+  afex::aov_ez('Subject','dprime', ., within = c('Valence'))
+df3a_dprime_o_anova_apa <- df3a_dprime_o_anova$aov %>% papaja::apa_print()
+posthoc_3a_d_o <- emmeans::emmeans(df3a_dprime_s_anova, "Valence")
+pairs(posthoc_3a_d_o)
+
+```
+There was evidence for the main effect of valence, `r df3a_dprime_anova_apa$full$Valence`, and main effect of self-relevance, `r df3a_dprime_anova_apa$full$Identity`, as well as the interaction, `r df3a_dprime_anova_apa$full$Identity_Valence`. 
+
+We then conducted separated ANOVA for self-referential and other-referential trials. The valence effect was shown for the self-referential conditions, `r df3a_dprime_s_anova_apa$full$Valence`. Post-hoc test revealed that the Good-Self condition (1.97 $\pm$ 0.14) was with greater *d* prime than Netural condition (1.41 $\pm$ 0.12, *t*(34) = 4.505, *p* = 0.0002), and Bad-self condition (1.43 $\pm$ 0.102),  *t*(34) = 3.856, *p* = 0.0014. There was difference between neutral and bad conidition, *t*(34) = -0.238, *p* = 0.9694. However, no effect of valence was found for the other-referential condition `r df3a_dprime_o_anova_apa$full$Valence`.
+
+### Reaction time
+
+```{r 3a_RT, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
 df3a_RT_anova <- afex::aov_ez('Subject','RT_m',df3a.v.rt_m,     # using afex's function 
                                   within = c('Matchness','Identity','Valence'))
 df3a_RT_anova_apa <- df3a_RT_anova %>% papaja::apa_print()
@@ -991,36 +1001,41 @@ We found intercation between Matchness and Valence (`r df3a_RT_anova_apa$full$Ma
 
 ```{r 3a_RT_match, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
 # match trials
-df3a.v.rt_m1 <- df3a.v %>%
-  dplyr::filter(ACC == 1 & Matchness == "Match") %>%
-  dplyr::group_by(Site, Subject, Matchness, Identity, Valence) %>%
-  dplyr::summarise(RT_m = mean(RT),
-                   Ntrial = length(RT)) %>%
-  dplyr::ungroup() %>%
-  dplyr::mutate(Valence = factor(Valence, levels = c("Good","Neutral","Bad")),
-                Identity = factor(Identity, levels = c('Self', 'Other')))
+df3a_RT_anova_m <- df3a.v.rt_m %>%
+  dplyr::filter(Matchness == "Match") %>%
+  afex::aov_ez('Subject','RT_m',., within = c('Identity','Valence'))
 
-df3a_RT_anova_m <- afex::aov_ez('Subject','RT_m',df3a.v.rt_m1,     # using afex's function 
-                                  within = c('Identity','Valence'))
 df3a_RT_anova_m_apa <- df3a_RT_anova_m %>% papaja::apa_print()
 
-posthoc_3a_rt <- emmeans::emmeans(df3a_RT_anova_m, c('Identity',"Valence")) # compare each valence for both self and other condition
+#posthoc_3a_rt <- emmeans::emmeans(df3a_RT_anova_m, c('Identity',"Valence")) # compare each valence for both self and other condition
 # pairs(posthoc_3a_rt)
 
-# Mismatch trials
-df3a.v.rt_m2 <- df3a.v %>%
-  dplyr::filter(ACC == 1 & Matchness == "Mismatch") %>%
-  dplyr::group_by(Site,Subject,Matchness, Identity, Valence) %>%
-  dplyr::summarise(RT_m = mean(RT),
-                   Ntrial = length(RT)) %>%
-  dplyr::ungroup()
+df3a_RT_anova_m_s <- df3a.v.rt_m %>%
+  dplyr::filter(Matchness == "Match" & Identity == "Self") %>%
+  afex::aov_ez('Subject','RT_m',., within = c('Valence'))
 
-df3a_RT_anova_nm <- afex::aov_ez('Subject','RT_m',df3a.v.rt_m2,     # using afex's function 
-                                  within = c('Identity','Valence'))
+df3a_RT_anova_m_s_apa <- df3a_RT_anova_m_s %>% papaja::apa_print()
+
+posthoc_3a_rt_m_s <- emmeans::emmeans(df3a_RT_anova_m_s, 'Valence')
+pairs(posthoc_3a_rt_m_s)
+
+df3a_RT_anova_m_o <- df3a.v.rt_m %>%
+  dplyr::filter(Matchness == "Match" & Identity == "Other") %>%
+  afex::aov_ez('Subject','RT_m',., within = c('Valence'))
+
+df3a_RT_anova_m_o_apa <- df3a_RT_anova_m_o %>% papaja::apa_print()
+
+
+# Mismatch trials
+df3a_RT_anova_nm <- df3a.v.rt_m %>%
+  dplyr::filter(Matchness == "Mismatch") %>%
+  afex::aov_ez('Subject','RT_m', ., within = c('Identity','Valence'))
+
 df3a_RT_anova_nm_apa <- df3a_RT_anova_nm %>% papaja::apa_print()
 ```
-For the matched trials, we found that main effect of valence `r df3a_RT_anova_m_apa$full$Valence`, but not the effect of identity `r df3a_RT_anova_m_apa$full$Identity`, nor the interaction `r df3a_RT_anova_m_apa$full$Identity_Valence`. 
-For the mismatched trials, we found the main effect of Identity `r df3a_RT_anova_nm_apa$full$Identity`, but not the main effect of valence `r df3a_RT_anova_nm_apa$full$Valence` or interaction between the two `r df3a_RT_anova_nm_apa$full$Identity_Valence`.
+For the matched trials, we found that the interaction between identity and valence, `r df3a_RT_anova_m_apa$full$Identity_Valence`, as well as the main effect of valence `r df3a_RT_anova_m_apa$full$Valence`, but not the effect of identity `r df3a_RT_anova_m_apa$full$Identity`. As for the *d* prime, we separated analyzed the self-referential and other-referential trials. For the Self-referential trials, we found the main effect of valence, `r df3a_RT_anova_m_s_apa$full$Valence`; for the other-referential trials, the effect of valence is weaker, `r df3a_RT_anova_m_o_apa$full$Valence`. We then focused on the self conditions: the good-self condition (713 $\pm$ 12) is faster than neutral- (776 $\pm$ 11.8), *t*(34) = -7.396, *p* < .0001 , and bad-self (772 $\pm$ 10.1) conditions,  *t*(34) = -5.66, *p* < .0001. But there is not difference between neutral- and bad-self conditions, *t*(34) = 0.481, *p* = 0.881.
+
+For the mismatched trials, we didn't found any strong effect: identity, `r df3a_RT_anova_nm_apa$full$Identity`, valence `r df3a_RT_anova_nm_apa$full$Valence`, or interaction between the two `r df3a_RT_anova_nm_apa$full$Identity_Valence`.
 
 # Experiment 3b
 In study 3a, participants had to remember 6 pairs of association, which cause high cogitive load during the whole exepriment. To eliminate the influence of cognitive load, we conducted study 3b, in which participant learn three aspect of self and stranger seperately in to consecutive task. We hypothesize that we will replicate the pattern of study 3a, i.e., the effect of moral valence only occurs for self-relevant conditions.
